--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/react": "^16.9.49",
     "@types/styled-components": "^5.1.3",
     "babel-plugin-styled-components": "^1.11.1",
+    "fontfaceobserver": "^2.1.0",
+    "lorem-ipsum": "^2.0.3",
     "next": "9.5.3",
     "prettier": "^2.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.0",
     "typescript": "^4.0.2"
   },
